📚 Docs: Update README + Pterodactyl fix + improved build artifacts
- README: badges, build status, honest feature list, install steps
- build.yml: prepares VoltPur-26.2.jar, VoltPur.jar, server.jar + sha256
- PTERODACTYL_FIX.md: explains ZIP vs JAR, SFTP, file validation for Invalid jar error
- Fixes user reported Invalid or corrupt jarfile in Pterodactyl